again fixing letter spacing

--- a/sass/base/_typhography.scss
+++ b/sass/base/_typhography.scss
@@ -13,8 +13,8 @@
 
   @include respond(mobile) {
     padding: 0 1rem;
-    word-spacing: 1.3rem;
-    letter-spacing: 0.8rem;
+    word-spacing: 0.6rem;
+    letter-spacing: 0.5rem;
   }
 
   @include respond(mobile-small) {
