--- a/sass/css/style.comp.css
+++ b/sass/css/style.comp.css
@@ -106,7 +106,9 @@ body {
       font-size: 4rem; } }
   @media only screen and (max-width: 37.5em) {
     .heading__main {
-      padding: 0 1rem; } }
+      padding: 0 1rem;
+      word-spacing: 0.6rem;
+      letter-spacing: 0.5rem; } }
   @media only screen and (max-width: 29.37em) {
     .heading__main {
       padding: 0 2.5rem;
